# Description:
#   Contains integrations between JAX and OpenAI Triton

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "triton_kernel_call_lib",
    srcs = ["lib/triton_kernel_call.cc"],
    deps = [
        "@cuda//:cuda_headers",
        "@cuda//:libcuda",
    ],
)
