[project]
name = "jax-triton"
dynamic = ["version"]
description = "JAX + OpenAI Triton integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "absl-py>=1.4.0",
  "jax>=0.4.31",
  "triton>=3.0",
  "setuptools",  # triton seems to need this when installing itself.
]

[project.optional-dependencies]
tests = [
  "pytest"
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["jax_triton"]

[tool.setuptools.dynamic]
version = {attr = "jax_triton.version.__version__"}
