[project]
name = "jax-triton"
dynamic = ["version"]
description = "JAX + OpenAI Triton integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "absl-py>=1.4.0",
  "jax>=0.4.31",
  "triton>=3.0",
]

[project.optional-dependencies]
tests = [
  "pytest"
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["jax_triton"]

[tool.setuptools.dynamic]
version = {attr = "jax_triton.version.__version__"}

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
    "*.ipynb",
]
line-length = 88
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
ignore = [
    # Do not assign a `lambda` expression, use a `def`
    "E731",
    # Module level import not at top of file
    "E402",
    # Ambiguous variable name
    "E741",
]
